[package]
name = "owag"
version = "0.1.0"
authors = ["Cubeasaurous <yaegababa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled="0.9.1"

[dependencies.sdl2]
version="0.33"
default-features=false
features=["ttf","image","unsafe_textures"]

